--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,5 +49,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    testImplementation 'org.mockito:mockito-core:3.11.2'
+    androidTestImplementation 'org.mockito:mockito-android:3.11.2'
+
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0' // Зависимость на MPAndroidChart
 }
