--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <uses-feature android:name="android.hardware.telephony" android:required="false" />
@@ -16,6 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Diploma"
         tools:targetApi="31">
+        <activity android:name=".ui.NoInternetActivity"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true"
